fix ios cutoff of main menu
under ios the main menu get's cutted of if the tabs bar on safari was opened. Add margin to bottom to eliminate this issiue

--- a/src/app/_template/main-menu/main-menu.component.sass
+++ b/src/app/_template/main-menu/main-menu.component.sass
@@ -42,7 +42,7 @@ hr
 
   ul.bottom
     margin-top: auto
-    bottom: 0
+    bottom: 25px
     position: absolute
 
   ul
